tdf#117283 Select all drawing objects with the same name

Change-Id: Ib79f4a9694e4aafb7a46c86661bab0c21b9ee67d
Reviewed-on: https://gerrit.libreoffice.org/53582
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>